# full-stack-template

./: .env.example  .gitignore  CLAUDE.md  MAKEFILE_GUIDE.md  Makefile  README.md  TYPE_GENERATION_AND_DEPLOYMENT.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: linear-link.yml
.husky/: pre-commit
_plans/: backend-docker-compose-implementation.md
ai-service/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/src/app/: main.py
ai-service/src/app/api/: dependencies.py
ai-service/src/app/api/schemas/: base_response.py  errors.py  request.py  response.py
ai-service/src/app/api/v1/: routes.py  user_routes.py  weaviate_routes.py
ai-service/src/app/core/: context.py  exceptions.py  logging.py  settings.py  version.py
ai-service/src/app/db_ops/: user_db_ops.py  weaviate_db_ops.py
ai-service/src/app/dependency_injection/: container.py
ai-service/src/app/domain/: models.py  operations.py  primitives.py
ai-service/src/app/infrastructure/db/: engine.py  schema.py  utils.py
ai-service/src/app/infrastructure/weaviate/: client.py
ai-service/src/app/middleware/: logging.py
ai-service/src/app/services/: user_service.py  weaviate_service.py
ai-service/src/migrations/: env.py
ai-service/src/migrations/versions/: 202410051200_create_users_table.py
ai-service/tests/: conftest.py  test_version.py
ai-service/tests/integration/: test_create_user.py  test_weaviate_integration.py
ai-service/tests/unit/: test_base_response.py  test_domain_operations.py  test_email.py  test_exceptions.py  test_request_schema.py  test_routes.py  test_user_service.py
ai-service/tests/utils/: requests.py
backend/: .dockerignore  .env.development  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  drizzle.config.ts  eslint-local-rules.js  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.js
backend/.claude/: settings.json
backend/.claude/hooks/: validate-barrel-exports.sh
backend/.claude/temp/: fcis-design-2025-11-06-20-35-34.md  fcis-design-2025-11-07-10-03-28.md  fcis-design-2025-11-07-14-50-18.md  fcis-design-2025-11-07-15-24-25.md  fcis-design-2025-11-07-15-32-25.md  fcis-design-2025-11-07-15-32-33.md  fcis-design-2025-11-07-16-22-30.md  fcis-design-2025-11-07-16-22-37.md  fcis-design-2025-11-12-12-11-58.md  fcis-design-2025-11-12-14-28-22.md  fcis-design-2025-11-12-14-28-27.md
backend/_docs/: openapi.json
backend/docker/: .env.docker.example  Dockerfile  otel-collector-config.yaml
backend/scripts/: docker-entrypoint.sh  generate-openapi.ts
backend/src/: index.ts  instrumentation.ts
backend/src/__tests__/: sum.spec.ts
backend/src/db/: client.ts  schema.ts
backend/src/middlewares/: auth.ts  effectHandler.ts  errorHandler.ts  metrics.ts  middlewares.ts  requestLogger.ts  resultHandler.ts  validate.ts
backend/src/openapi/: generate.ts  registry.ts  schemas.ts
backend/src/routes/: index.ts
backend/tests/: global-setup.ts  setup.ts
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierignore  Dockerfile  Makefile  README.md  env.d.ts  eslint.config.js  i18n.ts  nginx.conf  package-lock.json  package.json  schema.d.ts  translations.csv  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: generate-types.sh  init-db.sql
shared/: .eslintrc.json  .spectral.yaml  package.json
shared/contracts/: README.md  backend-ai-api.yaml  frontend-backend-api.yaml
test/: CLAUDE.md  cypress.config.ts
(+248 files in other folders)
